fix(docs-infra): improve legibility and focus on content
This commit changes the layout of the main content to improve
legibility, especially on wider screens:

- Limit main content width to 50em (800px by default).
- Center main content on the page.

--- a/aio/src/styles/0-base/_typography.scss
+++ b/aio/src/styles/0-base/_typography.scss
@@ -102,13 +102,10 @@ a {
   @include line-height(32);
   font-weight: 400;
   color: $darkgray;
+
   & > em {
     @include letter-spacing(0.3);
   }
-}
-
-p {
-  margin: 14px 0 0;
 }
 
 p + ul {
